# auto-screenshot

./: .gitignore  Cargo.toml  build.rs  readme.md  tray-config.rc
src/: main.rs  screenshotter.rs
src/utils/: logs.rs
