[package]
name = "auto-screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "0.9.0"
chrono = "0.4.31"
screenshots = "0.8.5"
open = "3"

[build-dependencies]
embed-resource = "2.3"
